--- a/Presentation/Tech2019.Presentation/App.config
+++ b/Presentation/Tech2019.Presentation/App.config
@@ -13,7 +13,7 @@
 		</providers>
 	</entityFramework>
 	<connectionStrings>
-		<add name="TechDBContext" connectionString="Data Source=CAN-TOKHAY-MASA\CANTOKHAY;initial Catalog=Tech2019DB;integrated Security=True;" providerName="System.Data.SqlClient" />
-		<!--<add name="TechDBContext" connectionString="Data Source=DESKTOP-OHO9G30\SQLEXPRESS;initial Catalog=Tech2019DB;integrated Security=True;" providerName="System.Data.SqlClient" />-->
+		<!--<add name="TechDBContext" connectionString="Data Source=CAN-TOKHAY-MASA\CANTOKHAY;initial Catalog=Tech2019DB;integrated Security=True;" providerName="System.Data.SqlClient" />-->
+		<add name="TechDBContext" connectionString="Data Source=DESKTOP-OHO9G30\SQLEXPRESS;initial Catalog=Tech2019DB;integrated Security=True;" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 </configuration>
