--- a/DataAccessLayer/Tech2019.DataAccessLayer/Tech2019.DataAccessLayer.csproj
+++ b/DataAccessLayer/Tech2019.DataAccessLayer/Tech2019.DataAccessLayer.csproj
@@ -55,9 +55,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\TechDBContext.cs" />
-    <Compile Include="Migrations\202412111952566_init-PC.cs" />
-    <Compile Include="Migrations\202412111952566_init-PC.designer.cs">
-      <DependentUpon>202412111952566_init-PC.cs</DependentUpon>
+    <Compile Include="Migrations\202412171450017_init-laptop.cs" />
+    <Compile Include="Migrations\202412171450017_init-laptop.designer.cs">
+      <DependentUpon>202412171450017_init-laptop.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -74,8 +74,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202412111952566_init-PC.resx">
-      <DependentUpon>202412111952566_init-PC.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202412171450017_init-laptop.resx">
+      <DependentUpon>202412171450017_init-laptop.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
