--- a/EntityLayer/Tech2019.EntityLayer/Tech2019.EntityLayer.csproj
+++ b/EntityLayer/Tech2019.EntityLayer/Tech2019.EntityLayer.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IGenericEntity.cs" />
+    <Compile Include="Concrete\About.cs" />
     <Compile Include="Concrete\Action.cs" />
     <Compile Include="Concrete\Admin.cs" />
     <Compile Include="Concrete\Category.cs" />
